[package]
name = "misisa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = {version = "0.3", features = ["compression-gzip", "tls"]}
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
calamine = "0.18"
serde = {version = "1", features = ["derive"]}
itertools = "0.10"
rayon = "1"
serde_json = "1"
